moved out the about markup. fixed any_word in extended. added scrollbar to extended.
git-svn-id: https://svn.spraakdata.gu.se/repos/lb/trunk/sbkhs/korp-frontend@34459 ef392f78-ee14-0410-84e5-9db46baae5bb

--- a/style.css
+++ b/style.css
@@ -160,6 +160,8 @@ input:placeholder, textarea:placeholder {
 }
 
 .query_row {
+	overflow :auto;
+	white-space: nowrap;
 }
 .query_row table {
 	margin-bottom : 15px;
